# portfolio-analytics

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  PROJECT_OVERVIEW.md  Procfile  QUICKSTART.md  README.md  Taskfile.yml  pyproject.toml
api/: README.md  alembic.ini  dependencies.py  main.py  pyproject.toml
api/.claude/: ralph-loop.local.md
api/adapters/: __init__.py
api/adapters/duckdb/: __init__.py  analytics_repository.py  base_repository.py  iceberg_connection.py  simulation_params_repository.py  storage_connection.py
api/adapters/llm/: __init__.py  anthropic_repository.py
api/adapters/oauth/: __init__.py  mock_oauth_provider.py
api/adapters/postgres/: __init__.py  connection.py  holding_repository.py  portfolio_builder_repository.py  portfolio_repository.py  position_repository.py  risk_analysis_repository.py  session_repository.py  simulation_repository.py  ticker_repository.py  transaction_repository.py  unit_of_work.py  user_repository.py
api/adapters/yfinance/: __init__.py  ticker_validator.py
api/alembic/: env.py
api/alembic/versions/: 6db406e40ef4_create_sessions_and_holdings_tables.py  a1b2c3d4e5f6_add_users_portfolios_auth.py  a1b2c3d4e5f6_create_v1_portfolio_data_model.py  b2c3d4e5f6a7_apply_v1_data_model.py  c3d4e5f6a7b8_add_holding_compat_columns.py  d4e5f6a7b8c9_add_user_admin_column.py  db5e0b663db5_remove_session_management.py  e5f6a7b8c9d0_add_oauth_fields.py  f3cc6b3b2a94_add_simulations_table.py  g4dd7c4c3b95_add_risk_analysis_table.py  h5ee8d5d4c06_migrate_to_position_model.py
api/api/: __init__.py
api/api/mappers/: __init__.py  analytics_mapper.py  auth_mapper.py  holding_mapper.py  portfolio_mapper.py  session_mapper.py
api/api/routers/: __init__.py  analytics.py  auth.py  holdings.py  oauth.py  portfolios.py  sessions.py  simulations.py  tickers.py
api/api/schemas/: __init__.py  analytics.py  auth.py  holding.py  portfolio.py  position.py  risk_analysis.py  session.py  simulation.py  ticker.py
api/config/: dev.yaml  local.yaml  prod.yaml
api/domain/: __init__.py  exceptions.py
api/domain/commands/: __init__.py  compute_analytics.py  create_portfolio_with_holdings.py
api/domain/models/: __init__.py  holding.py  portfolio.py  position.py  risk_analysis.py  security.py  session.py  simulation.py  transaction.py  user.py
api/domain/ports/: __init__.py  analytics_repository.py  holding_repository.py  llm_repository.py  oauth_provider.py  portfolio_builder_repository.py  portfolio_repository.py  ticker_validator.py  (+9 more)
api/scripts/: seed_securities.py
api/tests/: __init__.py  conftest.py  test_oauth_service.py  test_portfolio_builder_service.py  test_risk_analysis_service.py
simulation/: README.md  pyproject.toml
simulation/examples/: compare_models.py
simulation/tests/: __init__.py  test_simulator.py
(+229 files in other folders)
