[tool.poetry]
name = "portfolio_analytics"
version = "0.1.0"
description = "A portfolio analytics tool using DuckDB, DBT, and Streamlit"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
yfinance = "^0.2.32"
requests = "^2.31.0"
duckdb = "^1.1.0"
dbt-core = "~1.7.0"
dbt-duckdb = "~1.7.0"
protobuf = ">=4.0.0,<5.0.0"
streamlit = "^1.28.2"
plotly = "^5.18.0"
altair = "^5.1.2"
fredapi = "^0.5.1"
python-dotenv = "^1.0.0"
psycopg = {extras = ["binary"], version = "^3.3.2"}
# S3 and Iceberg support
pyiceberg = "^0.7.0"
s3fs = "^2024.10.0"
pyarrow = "^17.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
